--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 viewBox="0 0 21 20"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                class="notify-icon"
               >
                 <path
                   fill-rule="evenodd"
@@ -95,10 +96,46 @@
                   fill="#b5b5b5"
                 />
               </svg>
+
+              <div class="notify-dropdown hidden">
+                <div class="panel-heading">
+                  <h4>Alerts</h4>
+                </div>
+
+                <div class="panel-body">
+                  <p class="panel-text">
+                    Alerts about your store and account will show here
+                  </p>
+                </div>
+              </div>
             </div>
             <div class="badge-box profile">
               <div class="profile-name">Davii Collections</div>
               <span class="profile-span">DC</span>
+
+              <div class="profile-menu hidden">
+                <div class="menu-heading">
+                  <div class="profile-tag">
+                    <span class="profile-span">DC</span>
+                    <div class="pro-name">Davii Collections</div>
+                    <span>icon</span>
+                  </div>
+                  <div class="store-box">
+                    <span>icon</span>
+                    <p>All stores</p>
+                  </div>
+                </div>
+
+                <div class="menu-body">
+                  <ul class="menu-mid">
+                    <li>Help Center</li>
+                    <li>Changelog</li>
+                    <li>Community forums</li>
+                    <li>Hire a Shopify Partner</li>
+                    <li>Keyboard shortcuts</li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -120,11 +157,11 @@
 
             <div class="trial-btns">
               <a href="http://shopify.com/pricing">
-                <button class="button trial-btn">Select a plan</button>
+                <button class="button trial-btn link">Select a plan</button>
               </a>
               <svg
-                width="28"
-                height="28"
+                width="20"
+                height="20"
                 viewBox="0 0 21 20"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
@@ -144,14 +181,14 @@
         <div class="accordion-box">
           <!-- ----------- -->
           <div class="texts-box">
-            <div>
+            <div class="texts-inner-box">
               <h3>Setup guide</h3>
               <p>
                 Use this personalized guide to get your store up and running.
               </p>
 
               <div class="progress-box">
-                <p>1 / 5 completed</p>
+                <div>1 / 5 completed</div>
 
                 <svg
                   class="progress-range"
@@ -170,11 +207,12 @@
 
             <div>
               <svg
-                width="41"
-                height="40"
+                width="19"
+                height="19"
                 viewBox="0 0 21 20"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                class="step-down"
               >
                 <path
                   fill-rule="evenodd"
@@ -185,14 +223,26 @@
               </svg>
 
               <!-- down -->
-              <!-- <svg width="41" height="40" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.21967 8.46967C6.51256 8.17678 6.98744 8.17678 7.28033 8.46967L10.75 11.9393L14.2197 8.46967C14.5126 8.17678 14.9874 8.17678 15.2803 8.46967C15.5732 8.76256 15.5732 9.23744 15.2803 9.53033L11.2803 13.5303C10.9874 13.8232 10.5126 13.8232 10.2197 13.5303L6.21967 9.53033C5.92678 9.23744 5.92678 8.76256 6.21967 8.46967Z" fill="#fff"/>
-                </svg> -->
+              <!-- <svg
+                class="step-down"
+                width="19"
+                height="19"
+                viewBox="0 0 21 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M6.21967 8.46967C6.51256 8.17678 6.98744 8.17678 7.28033 8.46967L10.75 11.9393L14.2197 8.46967C14.5126 8.17678 14.9874 8.17678 15.2803 8.46967C15.5732 8.76256 15.5732 9.23744 15.2803 9.53033L11.2803 13.5303C10.9874 13.8232 10.5126 13.8232 10.2197 13.5303L6.21967 9.53033C5.92678 9.23744 5.92678 8.76256 6.21967 8.46967Z"
+                  fill="#fff"
+                />
+              </svg> -->
             </div>
           </div>
 
           <!-- ------------ -->
-          <div class="checks-box">
+          <div class="checks-box hidden">
             <!-- 1 -->
             <div class="check box-1">
               <div class="uncheck">
@@ -206,12 +256,13 @@
                 <check-svg></check-svg>
               </div>
               <div class="check-texts">
-                <h3>Customize your online store</h3>
+                <h3 class="check-tag">Customize your online store</h3>
 
-                <div class="check-infos">
+                <div class="check-infos hidden">
                   <p>
                     Choose a theme and add your logo, colors, and images to
-                    reflect your brand. <a>Learn more</a>
+                    reflect your brand. <br />
+                    <a>Learn more</a>
                   </p>
 
                   <button class="button check-text-btn">Customize theme</button>
@@ -233,9 +284,9 @@
                 <check-svg></check-svg>
               </div>
               <div class="check-texts">
-                <h3>Add your first product</h3>
+                <h3 class="check-tag">Add your first product</h3>
 
-                <div class="check-infos">
+                <div class="check-infos hidden">
                   <p>
                     Write a description, add photos, and set pricing for the
                     products you plan to sell. <a>Learn more</a>
@@ -263,9 +314,9 @@
                 <check-svg></check-svg>
               </div>
               <div class="check-texts">
-                <h3>Add a custom domain</h3>
+                <h3 class="check-tag">Add a custom domain</h3>
 
-                <div class="check-infos">
+                <div class="check-infos hidden">
                   <p>
                     Your current domain is 222219.myshopify.com but you can add
                     a custom domain to help customers find your online store.
@@ -293,7 +344,7 @@
               <div class="check-texts">
                 <h3>Name your store</h3>
 
-                <div class="check-infos">
+                <div class="check-infos hidden">
                   <p>
                     Your temporary store name is currently Davii collections.
                     The store name appears in your admin and your online store.
@@ -321,7 +372,7 @@
               <div class="check-texts">
                 <h3>Set up a payment provider</h3>
 
-                <div class="check-infos">
+                <div class="check-infos hidden">
                   <p>
                     Choose a payment provider to start accepting payments.
                     You’ll need to create an account with the payment provider
